--- a/Rosenbrock/Rosenbrock.vcxproj.filters
+++ b/Rosenbrock/Rosenbrock.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Coord Descent.cpp">
+    <ClCompile Include="Rosenbrock.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
